--- a/version_test/bucket.yml
+++ b/version_test/bucket.yml
@@ -1,5 +1,5 @@
 flows:
-  c738e206-14cd-409e-808e-3f0c5879a289: {ver: 2, file: testing.snapshot, comments: a,
-    author: anonymous, created: 1574666425907, flowName: testing, flowDesc: ''}
+  c738e206-14cd-409e-808e-3f0c5879a289: {ver: 3, file: testing.snapshot, comments: b,
+    author: anonymous, created: 1574666437605, flowName: testing, flowDesc: ''}
 layoutVer: 1
 bucketId: 23759128-2db6-4c96-9794-788937a01999
